# cabal2nix

./: .envrc  .ghci  .gitignore  .travis.yml  CHANGELOG.md  GNUmakefile  README.md  Setup.hs  Setup.lhs  TODO  bootstrap.nix  cabal.project  cabal.project.local  cabal2nix-v3.cabal  cabal2nix.cabal  cabal2nix.hs  flake.nix  generate-cabal-file.hs  nix.mustache  nixos-types.cabal  package.yaml  regenerate-hackage-packages-with-local-hackage2nix.sh  regenerate-nixpkgs.sh  release-cabal2nix.nix  release-distribution-nixpkgs.nix  release-hackage2nix.nix  release-language-nix.nix  release-lens-construction-helper.nix  release.nix  shell.nix  stack.yaml  update-hackage-snapshot.sh  update-nixpkgs.sh  update-stackage.sh  weeder.dhall
.github/workflows/: ci-doctest-0.18.patch  ci-skip-package-map.patch  haskell-ci.yml
cabal2nix/: CHANGELOG.md  Main.hs  README.md  Setup.lhs  cabal2nix.cabal  package.yaml
cabal2nix/doc/: .gitignore  user-guide.md
cabal2nix/hackage2nix/: HackageGit.hs  Main.hs  README.md
cabal2nix/src/: Cabal2nix.hs  Main.hs
cabal2nix/test/: Main.hs
cabal2nix/test/golden-test-cases/: ChasingBottoms.nix.golden  Clipboard.nix.golden  FenwickTree.nix.golden  GPipe-GLFW.cabal  GenericPretty.nix.golden  HPDF.nix.golden  HTF.cabal  HTF.nix.golden  HTTP.cabal  HTTP.nix.golden  Hclip.nix.golden  MissingH.nix.golden  ObjectName.cabal  Only.nix.golden  QuickCheck.cabal  QuickCheck.nix.golden  ReadArgs.nix.golden  SHA.nix.golden  Strafunski-StrategyLib.nix.golden  (+423 more)
cabal2nix/test/golden-test-cases-granular/: .gitignore  ttrie.cabal  ttrie.nix.golden
distribution-nixpkgs/: .gitignore  .travis.yml  CHANGELOG.md  README.md  derivation-attr-paths.nix  distribution-nixpkgs.cabal  package.yaml
distribution-nixpkgs/.github/workflows/: ci-doctest-0.18.patch  ci-skip-package-map.patch  haskell-ci.yml
distribution-nixpkgs/src/Distribution/Nixpkgs/: Fetch.hs  Hashes.hs  License.hs  Meta.hs  PackageMap.hs
distribution-nixpkgs/src/Distribution/Nixpkgs/Haskell/: BuildInfo.hs  Derivation.hs  FromCabal.hs  Hackage.hs  HackageGit.hs  OrphanInstances.hs  PackageSourceSpec.hs
distribution-nixpkgs/src/Distribution/Nixpkgs/Haskell/FromCabal/: Configuration.hs  Flags.hs  Name.hs  Normalize.hs  Platform.hs  PostProcess.hs
distribution-nixpkgs/src/Distribution/Nixpkgs/Haskell/FromCabal/Configuration/: GHC7102.hs  Maintainers.hs
distribution-nixpkgs/src/Internal/: OrphanInstances.hs  PrettyPrinting.hs
distribution-nixpkgs/src/Language/Nix/: PrettyPrinting.hs
distribution-nixpkgs/test/: Main.hs  doctests.hs  hspec.hs
distribution-nixpkgs/test/data/: all-system-tuples.json  all-system-tuples.nix  regenerate-all-system-tuples.sh
doc/: .gitignore  00-future-of-haskell-packaging-in-nixpkgs.md  01-use-function-application-to-escape-override-hell.md  02-guarantee-consistent-builds-and-obsolete-overridescope.md  03-map-cabal-files-to-nix-without-information-loss.md  04-set-up-a-sufficiently-powerful-build-farm.md  05-publish-all-of-hackage.md  GNUmakefile  analyze-hydra-builds.r  analyze-hydra-requirements.r  conf.py  create-workspace.r  external-resources.rst  frequently-asked-questions.rst  future.org  generic-builder.nix  hal8-folien.md  hal8.md  index.rst  list-haskell-store-paths.sh  live-stream-notes.org  ng.nix  nixcon-2015-slides.md  nixos-meetup-3-slides.md  nixpkgs-developers-guide.rst  nixpkgs-maintainers-guide.rst  nixpkgs-users-guide.rst  other-resources.rst  packaging-workflow.md  user-guide.md  users-guide.rst
hackage-db/: .gitignore  .travis.yml  CHANGELOG.md  README.md  Setup.hs  cabal.project  hackage-db.cabal  new-callback-api.hs  new-class-api.hs  package.yaml
hackage-db/.github/workflows/: haskell-ci.yml
hackage-db/example/: list-known-versions.hs  show-meta-data.hs  show-package-versions.hs
hackage-db/src/Distribution/Hackage/: DB.hs
hackage-db/src/Distribution/Hackage/DB/: Builder.hs  Errors.hs  MetaData.hs  Parsed.hs  Path.hs  Unparsed.hs  Utility.hs
hackage2nix/: .gitignore  HackageGit.hs  Main.hs  README.md  Stackage.hs  hackage2nix.cabal  package.yaml  update-nixpkgs.sh  update-stackage.sh
hackage2nix/src/: Configuration.hs  HackageGit.hs  Main.hs  Stackage.hs
language-nix/: .gitignore  .travis.yml  CHANGELOG.md  LICENSE  NixParser.hs  README.md  cabal.project  language-nix.cabal  package.yaml  parse-nix.hs  run-nix.hs  self-test.hs  stack.yaml
language-nix/Language/: Nix.hs
language-nix/src/Language/Nix/: Binding.hs  Identifier.hs  Path.hs
language-nix/test/: Main.hs  hspec.hs
lens-construction-helper/: lens-construction-helper.cabal  package.yaml
nix-paths/: Setup.lhs  nix-paths.cabal
nix-paths/src/Nix/: FindFile.hs  Paths.hs
src/: Cabal2Nix.hs  Cabal2nix.hs  Hackage4Nix.hs  Main.hs  Nix.cf  PackageList.hs  cabal2nix.hs  from-cabal.hs  from-file.hs  hackage2nix.hs  hackage4nix.hs
src/Cabal2Nix/: CorePackages.hs  Flags.hs  Generate.hs  Hackage.hs  HackageGit.hs  License.hs  Name.hs  Normalize.hs  Package.hs  PostProcess.hs  Pretty.hs  Version.hs
src/Hackage4Nix/: Nix.hs
src/Hpack/: Dhall.hs
src/Internal/: HaskellPackage.hs  Lens.hs  PrettyPrinting.hs  Regex.hs
src/Language/: Nix.hs
test/: Main.hs  doc-test.hs  doctest.hs  doctests.hs  spec.hs
test/golden-test-cases/: BioHMM.cabal  BioHMM.nix.golden  ChasingBottoms.cabal  ChasingBottoms.nix.golden  Clipboard.cabal  Clipboard.nix.golden  FenwickTree.cabal  FenwickTree.nix.golden  GPipe-GLFW.nix.golden  GenericPretty.cabal  GenericPretty.nix.golden  HPDF.cabal  HPDF.nix.golden  HTF.nix.golden  HTTP.nix.golden  Hclip.cabal  Hclip.nix.golden  MissingH.cabal  MissingH.nix.golden  ObjectName.nix.golden  Only.nix.golden  QuasiText.cabal  QuasiText.nix.golden  QuickCheck.nix.golden  ReadArgs.cabal  ReadArgs.nix.golden  SHA.cabal  SHA.nix.golden  Strafunski-StrategyLib.cabal  Strafunski-StrategyLib.nix.golden  accelerate-fftw.nix.golden  accelerate.nix.golden  active.nix.golden  adjunctions.nix.golden  aeson-diff.nix.golden  aeson-pretty.nix.golden  algebraic-graphs.nix.golden  amazonka-cloudtrail.nix.golden  amazonka-cloudwatch-logs.nix.golden  amazonka-codedeploy.nix.golden  (+471 more)
(+82 files in other folders)
