name:               cabal2nix-v3
version:            3.0.20200613
synopsis:           Convert Cabal files into Nix build instructions.
description:
  Convert Cabal files into Nix build instructions. Users of Nix can install the latest
  version by running:
  .
  > nix-env -i cabal2nix
license:            BSD3
license-file:       LICENSE
author:             Peter Simons
maintainer:         simons@cryp.to
stability:          stable
tested-with:        GHC == 8.8.3, GHC == 8.10.1
category:           Distribution, Nix
homepage:           https://github.com/nixos/cabal2nix#readme
bug-reports:        https://github.com/nixos/cabal2nix/issues
build-type:         Simple
extra-source-files: test/golden-test-cases/*.cabal
                    test/golden-test-cases/*.nix.golden
cabal-version:      >= 1.10

source-repository head
  type:     git
  location: git://github.com/nixos/cabal2nix.git

executable cabal2nix-from-file
  main-is:          Main.hs
  other-modules:    Paths_cabal2nix_v3
  hs-source-dirs:   src
  build-depends:    base                 > 4.11 && < 5
                  , Cabal                > 3.0 && < 3.3
                  , ansi-wl-pprint       >= 0.6.9 && < 0.7
                  , cabal2nix            == 2.15.*
                  , containers           >= 0.6.2.1 && < 0.7
                  , distribution-nixpkgs >= 1.3.1 && < 1.4
                  , language-nix         >= 2.2.0 && < 2.3
                  , lens                 >= 4.19.2 && < 4.20
                  , optparse-applicative >= 0.15.1.0 && < 0.16
                  , pretty               >= 1.1.3.6 && < 1.2
                  , split                >= 0.2.3.4 && < 0.3
                  , time                 >= 1.9.3 && < 1.10
  default-language: Haskell2010

-- test-suite regression-test
--   type:               exitcode-stdio-1.0
--   main-is:            Main.hs
--   hs-source-dirs:     test
--   build-depends:      base
--                     , Cabal
--                     , cabal2nix
--                     , containers
--                     , directory
--                     , filepath
--                     , language-nix
--                     , lens
--                     , pretty
--                     , process      > 1.2
--                     , tasty
--                     , tasty-golden
--   default-language:   Haskell2010
--   build-tools:        cabal2nix
--   ghc-options:        -Wall -Wcompat -Wincomplete-uni-patterns -Wincomplete-record-updates
--                       -Wredundant-constraints -threaded -with-rtsopts=-K64K
