name:               cabal2nix
version:            2.15.0
synopsis:           Convert Cabal files into Nix build instructions.
description:
  Convert Cabal files into Nix build instructions. Users of Nix can install the latest
  version by running:
  .
  > nix-env -i cabal2nix
license:            BSD3
license-file:       LICENSE
author:             Peter Simons, Andres Loeh, Benno Fünfstück, Mateusz Kowalczyk,
                    Michael Alan Dorman, Tom Smalley, Mathijs Kwik, Shea Levy, Dmitry
                    Malikov, Eric Seidel, Jacob Mitchell, Graham Christensen,
                    Hamish Mackenzie, Nikolay Amiantov, Aycan iRiCAN, Bryan
                    Gardiner, Joe Hermaszewski, John Wiegley, Philipp Hausmann,
                    Spencer Janssen, Tom Hunger, William Casarin, koral,
                    ksaric, Adam Vogt, Alexey Shmalko, Corey O'Connor, Cray
                    Elliott, David Johnson, Dmitry Bushev, Domen Kožar, Felix
                    Kunzmann, Gabriel Ebner, Gergely Risko, Joachim Fasting,
                    John Albietz, John Chee, Jussi Maki, Lisanna Dettwyler,
                    Mark Laws, Mark Wotton, Matthew Pickering, Matthew Stewart,
                    Matvey Aksenov, Nicholas Clarke, Nicolas Rolland, Oliver
                    Charles, Pascal Wittmann, Patrick John Wheeler, Phil de
                    Joux, Piotr Bogdan, Profpatsch, Raymond Gauthier, Renzo
                    Carbonara, Rodney Lorrimar, Sibi, Sukant Hajra, Tanner
                    Doshier, Vaibhav Sagar, Viktar Basharymau, danbst, karsten
                    gebbert, laMudri, Александр Цамутали
maintainer:         Peter Simons <simons@cryp.to>
stability:          stable
tested-with:        GHC == 8.6.5, GHC == 8.8.1
category:           Distribution, Nix
homepage:           https://github.com/nixos/cabal2nix#readme
bug-reports:        https://github.com/nixos/cabal2nix/issues
build-type:         Simple
extra-source-files: README.md
                    test/golden-test-cases/*.cabal
                    test/golden-test-cases/*.nix.golden
cabal-version:      1.24

source-repository head
  type:     git
  location: https://github.com/nixos/cabal2nix

library
  exposed-modules:    Cabal2nix
                      Distribution.Nixpkgs.Fetch
                      Distribution.Nixpkgs.Haskell
                      Distribution.Nixpkgs.Haskell.BuildInfo
                      Distribution.Nixpkgs.Haskell.Constraint
                      Distribution.Nixpkgs.Haskell.Derivation
                      Distribution.Nixpkgs.Haskell.FromCabal
                      Distribution.Nixpkgs.Haskell.FromCabal.Configuration
                      Distribution.Nixpkgs.Haskell.FromCabal.Flags
                      Distribution.Nixpkgs.Haskell.FromCabal.License
                      Distribution.Nixpkgs.Haskell.FromCabal.Name
                      Distribution.Nixpkgs.Haskell.FromCabal.Normalize
                      Distribution.Nixpkgs.Haskell.FromCabal.PostProcess
                      Distribution.Nixpkgs.Haskell.Hackage
                      Distribution.Nixpkgs.Haskell.OrphanInstances
                      Distribution.Nixpkgs.Haskell.PackageSourceSpec
  other-modules:      Paths_cabal2nix
  hs-source-dirs:     src
  build-depends:      base                 > 4.11
                    , Cabal                > 3
                    , aeson                > 1
                    , ansi-wl-pprint
                    , bytestring
                    , containers           >= 0.5.9
                    , deepseq              >= 1.4
                    , directory
                    , distribution-nixpkgs >= 1.3.1
                    , filepath
                    , hackage-db           >= 2.0.1
                    , hopenssl             >= 2
                    , hpack                >= 0.29.6
                    , language-nix
                    , lens
                    , optparse-applicative
                    , pretty               >= 1.1.2
                    , process
                    , split
                    , text
                    , time
                    , transformers
                    , yaml
  default-language:   Haskell2010
  default-extensions: MonadFailDesugaring
  other-extensions:   MultiParamTypeClasses
                      ScopedTypeVariables
                      FlexibleInstances
                      CPP
                      TemplateHaskell
                      StandaloneDeriving
                      RecordWildCards
                      OverloadedStrings
                      DeriveGeneric
  ghc-options:        -Wall -Wcompat -Wincomplete-uni-patterns -Wincomplete-record-updates
                      -Wredundant-constraints

executable cabal2nix
  main-is:            Main.hs
  hs-source-dirs:     cabal2nix
  build-depends:      base, cabal2nix
  default-language:   Haskell2010
  default-extensions: MonadFailDesugaring
  ghc-options:        -Wall -Wcompat -Wincomplete-uni-patterns -Wincomplete-record-updates
                      -Wredundant-constraints

executable hackage2nix
  main-is:            Main.hs
  other-modules:      HackageGit
                      Paths_cabal2nix
  hs-source-dirs:     hackage2nix
  build-depends:      base                 < 5
                    , Cabal                > 2.4
                    , aeson
                    , bytestring
                    , cabal2nix
                    , containers
                    , directory
                    , distribution-nixpkgs >= 1.2
                    , filepath
                    , hopenssl             >= 2
                    , language-nix
                    , lens
                    , monad-par
                    , monad-par-extras
                    , mtl
                    , optparse-applicative
                    , pretty               >= 1.1.2
  default-language:   Haskell2010
  default-extensions: MonadFailDesugaring
  ghc-options:        -Wall -Wcompat -Wincomplete-uni-patterns -Wincomplete-record-updates
                      -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N

test-suite regression-test
  type:               exitcode-stdio-1.0
  main-is:            Main.hs
  hs-source-dirs:     test
  build-depends:      base
                    , Cabal        > 2.4
                    , cabal2nix
                    , containers
                    , directory
                    , filepath
                    , language-nix
                    , lens
                    , pretty
                    , process      > 1.2
                    , tasty
                    , tasty-golden
  default-language:   Haskell2010
  default-extensions: MonadFailDesugaring
  build-tools:        cabal2nix
  ghc-options:        -Wall -Wcompat -Wincomplete-uni-patterns -Wincomplete-record-updates
                      -Wredundant-constraints -threaded -with-rtsopts=-K64K
