name:           distribution-nixpkgs
version:        1.1.1
synopsis:       Types and functions to manipulate the Nixpkgs distribution
description:    Types and functions to represent, query, and manipulate the Nixpkgs distribution.
category:       Distribution, Nix
homepage:       https://github.com/peti/distribution-nixpkgs#readme
bug-reports:    https://github.com/peti/distribution-nixpkgs/issues
maintainer:     Peter Simons <simons@cryp.to>
license:        BSD3
license-file:   LICENSE
build-type:     Simple
cabal-version:  >= 1.10
tested-with:    GHC == 7.10.3, GHC == 8.0.2, GHC == 8.2.2, GHC == 8.4.1

source-repository head
  type: git
  location: https://github.com/peti/distribution-nixpkgs

library
  hs-source-dirs:
      src
  other-extensions: DeriveGeneric PackageImports RecordWildCards TemplateHaskell
  ghc-options: -Wall
  build-depends:
      aeson
    , base > 4.2 && < 5
    , bytestring
    , Cabal > 2.2
    , containers
    , deepseq >= 1.4
    , language-nix > 2
    , lens
    , pretty >= 1.1.2
    , process
    , split
  exposed-modules:
      Distribution.Nixpkgs.License
      Distribution.Nixpkgs.Meta
      Distribution.Nixpkgs.PackageMap
      Distribution.Nixpkgs.Hashes
      Language.Nix.PrettyPrinting
  default-language: Haskell2010

test-suite hspec
  type: exitcode-stdio-1.0
  main-is: hspec.hs
  hs-source-dirs:
      test
  ghc-options: -Wall
  build-depends:
      base
    , deepseq
    , distribution-nixpkgs
    , hspec
    , lens
  default-language: Haskell2010
