name:          distribution-nixpkgs
version:       1.3.0
synopsis:      Types and functions to manipulate the Nixpkgs distribution
description:   Types and functions to represent, query, and manipulate the Nixpkgs distribution.
license:       BSD3
license-file:  LICENSE
maintainer:    Peter Simons <simons@cryp.to>
tested-with:   GHC == 8.0.2, GHC == 8.2.2, GHC == 8.4.4, GHC == 8.6.5, GHC == 8.8.1
category:      Distribution, Nix
homepage:      https://github.com/peti/distribution-nixpkgs
bug-reports:   https://github.com/peti/distribution-nixpkgs/issues
build-type:    Simple
cabal-version: >= 1.10

source-repository head
  type:     git
  location: https://github.com/peti/distribution-nixpkgs

library
  exposed-modules:    Distribution.Nixpkgs.Hashes
                      Distribution.Nixpkgs.License
                      Distribution.Nixpkgs.Meta
                      Distribution.Nixpkgs.PackageMap
                      Language.Nix.PrettyPrinting
  hs-source-dirs:     src
  build-depends:      base         > 4.2 && < 5
                    , Cabal        > 2.2
                    , aeson
                    , bytestring
                    , containers
                    , deepseq      >= 1.4
                    , language-nix > 2
                    , lens
                    , pretty       >= 1.1.2
                    , process
                    , split
  default-language:   Haskell2010
  default-extensions: MonadFailDesugaring
  other-extensions:   CPP
                      TemplateHaskell
                      RecordWildCards
                      DeriveGeneric
                      PackageImports
  ghc-options:        -Wall -Wcompat -Wincomplete-uni-patterns -Wincomplete-record-updates
                      -Wredundant-constraints

test-suite hspec
  type:               exitcode-stdio-1.0
  main-is:            hspec.hs
  hs-source-dirs:     test
  build-depends:      base, deepseq, distribution-nixpkgs, hspec, lens
  default-language:   Haskell2010
  default-extensions: MonadFailDesugaring
  ghc-options:        -Wall -Wcompat -Wincomplete-uni-patterns -Wincomplete-record-updates
                      -Wredundant-constraints
