name:                   hackage-db
version:                2.0
license:                BSD3
license-file:           LICENSE
author:                 Peter Simons, Alexander Altman, Ben James
maintainer:             Peter Simons <simons@cryp.to>
homepage:               https://github.com/peti/hackage-db#readme
bug-reports:            https://github.com/peti/hackage-db/issues
category:               Distribution
synopsis:               Access Hackage's package database via Data.Map
cabal-version:          >= 1.10
build-type:             Simple
tested-with:            GHC == 7.0.4, GHC == 7.4.2, GHC == 7.6.3, GHC == 7.8.4, GHC == 7.10.3
                      , GHC == 8.0.2, GHC == 8.2.2

description:
  This is an early and mostly undocumented release of the 2.x version of
  hackage-db that's intended mostly for experimenting with and testing of the
  new API. Porting code from 1.x to 2.x is pretty simple, but if you do that at
  this point, please expect minor details of this API to change in forthcoming
  releases. For production code, you are probably better off with the 1.x
  release for now.
  .
  Check out https://github.com/peti/hackage-db/tree/master/example/ for a
  collection of simple example programs that demonstrate how to use this code.

source-repository head
  type: git
  location: git://github.com/peti/hackage-db.git

flag install-examples
  description:   Build and install example programs.
  default:       False

library
  hs-source-dirs:
      src
  other-extensions: DeriveDataTypeable DeriveGeneric
  build-depends:
      base >= 3 && < 5
    , Cabal
    , containers
    , aeson
    , bytestring
    , directory
    , filepath
    , tar >= 0.4
    , time
    , utf8-string
  exposed-modules:
      Distribution.Hackage.DB
      Distribution.Hackage.DB.Errors
      Distribution.Hackage.DB.MetaData
      Distribution.Hackage.DB.Parsed
      Distribution.Hackage.DB.Path
      Distribution.Hackage.DB.Unparsed
      Distribution.Hackage.DB.Utility
  other-modules:
      Paths_hackage_db
  default-language: Haskell2010

executable list-known-versions
  main-is:              list-known-versions.hs
  hs-source-dirs:       example
  if flag(install-examples)
    buildable:          True
    build-depends:
        base >= 3 && < 5
      , Cabal
      , containers
      , hackage-db
      , bytestring
  else
    buildable:          False
  default-language: Haskell2010

executable show-meta-data
  main-is: show-meta-data.hs
  hs-source-dirs:
      example
  if flag(install-examples)
    buildable:          True
    build-depends:
        base >= 3 && < 5
      , Cabal
      , containers
      , hackage-db
      , bytestring
      , utf8-string
  else
    buildable:          False
  default-language: Haskell2010

executable show-package-versions
  main-is: show-package-versions.hs
  hs-source-dirs:
      example
  other-extensions: CPP
  if flag(install-examples)
    buildable:          True
    build-depends:
        base >= 3 && < 5
      , Cabal
      , containers
      , hackage-db
  else
    buildable:          False
  default-language: Haskell2010
