name:          language-nix
version:       2.2.0
synopsis:      Data types and functions to represent the Nix language
description:   Data types and useful functions to represent and manipulate the Nix
               language.
license:       BSD3
license-file:  LICENSE
author:        Peter Simons
maintainer:    simons@cryp.to
tested-with:   GHC == 8.2.2, GHC == 8.4.4, GHC == 8.6.5, GHC == 8.8.1
category:      Distribution, Language, Nix
homepage:      https://github.com/peti/language-nix#readme
bug-reports:   https://github.com/peti/language-nix/issues
build-type:    Simple
cabal-version: >= 1.10

source-repository head
  type:     git
  location: https://github.com/peti/language-nix

library
  exposed-modules:  Language.Nix
                    Language.Nix.Binding
                    Language.Nix.Identifier
                    Language.Nix.Path
  other-modules:    Paths_language_nix
  hs-source-dirs:   src
  build-depends:    base < 5, QuickCheck, deepseq, lens, parsec-class, pretty
  default-language: Haskell2010
  other-extensions: FlexibleContexts
                    TemplateHaskell
                    GeneralizedNewtypeDeriving
                    DeriveGeneric
